new side container with calendar and map